src/objects/Number_Scheme__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicate the number scheme referred to a specific Department</description>
        <label>Department</label>
        <referenceTo>Business_Entity__c</referenceTo>
        <relationshipLabel>Number Schemes</relationshipLabel>
        <relationshipName>Number_Schemes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAXNUMBER__c</fullName>
        <description>Used to calculate next consequence  auto number for referred object</description>
        <label>MAXNUMBER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <description>This field indicate the number scheme referred to a specific module</description>
        <label>Module</label>
        <picklist>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_format__c</fullName>
        <description>Number format for number scheme</description>
        <label>Number format</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <description>This field indicate the Prefix of number scheme format</description>
        <label>Prefix</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <description>This field indicate the revision format for number scheme</description>
        <label>Revision</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.1</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicate the number scheme referred to a specific Site</description>
        <label>Site</label>
        <referenceTo>Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Number Schemes</relationshipLabel>
        <relationshipName>Number_Schemes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <description>This field indicate the Suffix of number scheme format</description>
        <label>Suffix</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Number Scheme</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>List_view</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Module__c</columns>
        <columns>Number_format__c</columns>
        <columns>Prefix__c</columns>
        <columns>Revision__c</columns>
        <columns>MAXNUMBER__c</columns>
        <columns>Suffix__c</columns>
        <columns>Format__c</columns>
        <columns>Site__c</columns>
        <filterScope>Everything</filterScope>
        <label>List view</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Number Scheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Number Schemes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Default_Document_Number</fullName>
        <active>false</active>
        <description>Default Document Number</description>
        <errorConditionFormula>AND(Name == &apos;Default Document Number&apos; ,   NOT(ISNEW())  )</errorConditionFormula>
        <errorMessage>This record cannot be update able</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_Format_validation</fullName>
        <active>true</active>
        <description>To restrict input if not a number</description>
        <errorConditionFormula>NOT(ISNUMBER(Number_format__c))</errorConditionFormula>
        <errorDisplayField>Number_format__c</errorDisplayField>
        <errorMessage>Only Numbers are allowed</errorMessage>
    </validationRules>
</CustomObject>